# SolanaAnchorTranser

./: Anchor.toml  package-lock.json  package.json
programs/transferdemo/: Cargo.toml
programs/transferdemo/src/: lib.rs
tests/: transferdemo.ts
